--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -12,9 +12,9 @@ name: OpenWrt-CI
 on:
   schedule:
     - cron: 0 20 * * *
-  # push:
-  #   branches: 
-  #     - master
+  push:
+     branches: 
+       - master
 
 jobs:
   build:
@@ -187,6 +187,107 @@ jobs:
           # # CONFIG_TARGET_IMAGES_PAD is not set
           # # CONFIG_VMDK_IMAGES is not set
           # EOF
+          
+          CONFIG_TARGET_ramips=y
+          CONFIG_TARGET_ramips_mt7621=y
+          CONFIG_TARGET_ramips_mt7621_DEVICE_d-team_newifi-d2=y
+          CONFIG_ARIA2_BITTORRENT=y
+          CONFIG_ARIA2_NOXML=y
+          CONFIG_ARIA2_OPENSSL=y
+          CONFIG_ARIA2_WEBSOCKET=y
+          CONFIG_LIBCURL_COOKIES=y
+          CONFIG_LIBCURL_FILE=y
+          CONFIG_LIBCURL_FTP=y
+          CONFIG_LIBCURL_HTTP=y
+          CONFIG_LIBCURL_NO_SMB="!"
+          CONFIG_LIBCURL_OPENSSL=y
+          CONFIG_LIBCURL_PROXY=y
+          CONFIG_LIBSODIUM_MINIMAL=y
+          CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
+          CONFIG_PACKAGE_aria2=y
+          CONFIG_PACKAGE_ariang=y
+          CONFIG_PACKAGE_attr=y
+          CONFIG_PACKAGE_avahi-dbus-daemon=y
+          CONFIG_PACKAGE_boost=y
+          CONFIG_PACKAGE_boost-date_time=y
+          CONFIG_PACKAGE_boost-program_options=y
+          CONFIG_PACKAGE_boost-system=y
+          CONFIG_PACKAGE_ca-bundle=y
+          CONFIG_PACKAGE_curl=y
+          CONFIG_PACKAGE_dbus=y
+          CONFIG_PACKAGE_ipt2socks=y
+          CONFIG_PACKAGE_kcptun-client=y
+          CONFIG_PACKAGE_krb5-libs=y
+          CONFIG_PACKAGE_libattr=y
+          CONFIG_PACKAGE_libavahi-client=y
+          CONFIG_PACKAGE_libavahi-dbus-support=y
+          CONFIG_PACKAGE_libbz2=y
+          CONFIG_PACKAGE_libcap=y
+          CONFIG_PACKAGE_libcomerr=y
+          CONFIG_PACKAGE_libcurl=y
+          CONFIG_PACKAGE_libdaemon=y
+          CONFIG_PACKAGE_libdb47=y
+          CONFIG_PACKAGE_libdbus=y
+          CONFIG_PACKAGE_libev=y
+          CONFIG_PACKAGE_libexpat=y
+          CONFIG_PACKAGE_libffi=y
+          CONFIG_PACKAGE_libgdbm=y
+          CONFIG_PACKAGE_libmbedtls=y
+          CONFIG_PACKAGE_libpopt=y
+          CONFIG_PACKAGE_libsodium=y
+          CONFIG_PACKAGE_libsqlite3=y
+          CONFIG_PACKAGE_libss=y
+          CONFIG_PACKAGE_libtirpc=y
+          CONFIG_PACKAGE_libxml2=y
+          CONFIG_PACKAGE_luci-app-aria2=y
+          CONFIG_PACKAGE_luci-app-dnspod=y
+          CONFIG_PACKAGE_luci-app-shadowsocks-libev=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
+          CONFIG_PACKAGE_luci-app-ssrserver-python=y
+          CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
+          CONFIG_PACKAGE_luci-i18n-ssrserver-python-zh-cn=y
+          CONFIG_PACKAGE_python=y
+          CONFIG_PACKAGE_python-base=y
+          CONFIG_PACKAGE_python-codecs=y
+          CONFIG_PACKAGE_python-compiler=y
+          CONFIG_PACKAGE_python-ctypes=y
+          CONFIG_PACKAGE_python-db=y
+          CONFIG_PACKAGE_python-decimal=y
+          CONFIG_PACKAGE_python-distutils=y
+          CONFIG_PACKAGE_python-email=y
+          CONFIG_PACKAGE_python-gdbm=y
+          CONFIG_PACKAGE_python-light=y
+          CONFIG_PACKAGE_python-logging=y
+          CONFIG_PACKAGE_python-multiprocessing=y
+          CONFIG_PACKAGE_python-ncurses=y
+          CONFIG_PACKAGE_python-openssl=y
+          CONFIG_PACKAGE_python-pydoc=y
+          CONFIG_PACKAGE_python-sqlite3=y
+          ONFIG_PACKAGE_python-unittest=y
+          CONFIG_PACKAGE_python-xml=y
+          CONFIG_PACKAGE_samba36-server=y
+          CONFIG_PACKAGE_samba4-libs=y
+          CONFIG_PACKAGE_samba4-server=y
+          CONFIG_PACKAGE_shadowsocks-libev-config=y
+          CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
+          CONFIG_PACKAGE_shadowsocksr-libev-server=y
+          CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
+          CONFIG_PACKAGE_trojan=y
+          CONFIG_PACKAGE_v2ray=y
+          CONFIG_PACKAGE_wsdd2=y
+          CONFIG_SAMBA4_SERVER_AVAHI=y
+          CONFIG_SAMBA4_SERVER_VFS=y
+          CONFIG_SQLITE_FTS3=y
+          CONFIG_SQLITE_RTREE=y
+          CONFIG_boost-compile-visibility-hidden=y
+          CONFIG_boost-runtime-shared=y
+          CONFIG_boost-static-and-shared-libs=y
+          CONFIG_boost-variant-release=y
 
           # 
           # ========================固件定制部分结束========================
